--- a/_sass/jekyll-theme-minimal-darkgrey-background.scss
+++ b/_sass/jekyll-theme-minimal-darkgrey-background.scss
@@ -171,6 +171,11 @@ section.grid-item {
   text-decoration: none;
 }
 
+.bak {
+  color: #333333;
+  text-decoration: none;
+}
+
 /* footer styles
 -----------------------------------------------------------------------------*/
 
@@ -363,6 +368,11 @@ section.grid-item {
     text-decoration: none;
   }
 
+  .bak {
+    color: #333333;
+    text-decoration: none;
+  }
+  
 /* footer styles
 -----------------------------------------------------------------------------*/
 
