--- a/_sass/jekyll-theme-minimal-red-borders.scss
+++ b/_sass/jekyll-theme-minimal-red-borders.scss
@@ -171,6 +171,11 @@ section.grid-item {
   text-decoration: none;
 }
 
+.bak {
+  color: #F11111;
+  text-decoration: none;
+}
+
 /* footer styles
 -----------------------------------------------------------------------------*/
 
@@ -360,6 +365,11 @@ section.grid-item {
     color: #F11111;
     padding: 15px;
     text-align: center;
+    text-decoration: none;
+  }
+
+  .bak {
+    color: #F11111;
     text-decoration: none;
   }
 
