--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -171,6 +171,11 @@ section.grid-item {
   text-decoration: none;
 }
 
+.bak {
+  color: #F11111;
+  text-decoration: none;
+}
+
 /* footer styles
 -----------------------------------------------------------------------------*/
 
@@ -363,7 +368,12 @@ section.grid-item {
     text-decoration: none;
   }
 
-/* footer styles
+  .bak {
+    color: #F11111;
+    text-decoration: none;
+  }
+
+  /* footer styles
 -----------------------------------------------------------------------------*/
 
   footer p {
