--- a/_sass/jekyll-theme-minimal-platinum-background.scss
+++ b/_sass/jekyll-theme-minimal-platinum-background.scss
@@ -16,6 +16,10 @@
     padding: 15px;
   }
 
+  html {
+    scroll-behavior: smooth;
+  }
+
   h1 {
     color: #333333;
     font-size: 15px;
@@ -208,6 +212,10 @@
     margin: 5px;
     max-width: 300px;
     padding: 5px;
+  }
+
+  html {
+    scroll-behavior: smooth;
   }
 
   h1 {
