--- a/_sass/jekyll-theme-minimal-red-borders.scss
+++ b/_sass/jekyll-theme-minimal-red-borders.scss
@@ -4,7 +4,7 @@
 /* global styles
 -----------------------------------------------------------------------------*/
 @media screen and (min-width: 721px) {
-
+  
   p {
     margin: 15px;
     padding: 15px;
@@ -14,6 +14,10 @@
     margin: 15px;
     max-width: 300px;
     padding: 15px;
+  }
+
+  html {
+    scroll-behavior: smooth;
   }
 
   h1 {
@@ -208,6 +212,10 @@
     margin: 5px;
     max-width: 300px;
     padding: 5px;
+  }
+
+  html {
+    scroll-behavior: smooth;
   }
 
   h1 {
