--- a/_sass/jekyll-theme-minimal-red-borders.scss
+++ b/_sass/jekyll-theme-minimal-red-borders.scss
@@ -33,8 +33,8 @@
     border-style: none;
     column-gap: 15px;
     display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto;
     margin: 15px;
     padding: 15px;
     row-gap: 15px;
