--- a/_sass/jekyll-theme-minimal-darkgrey-background.scss
+++ b/_sass/jekyll-theme-minimal-darkgrey-background.scss
@@ -105,11 +105,14 @@
     background-color: #333333;
     border-style: none;
     font-size: 15px;
-    grid-column: 1 / 2;
+    grid-column: 1 / -1;
     grid-row: 1 / 2;
     margin: 15px;
     padding: 150px;
+    position: sticky;
     text-align: right;
+    top: 0;
+    z-index: 10;
   }
 
   header blockquote {
@@ -303,10 +306,14 @@
     background-color: #333333;
     border-style: none;
     font-size: 15px;
-    grid-column: 1 / 2;
+    grid-column: 1 / -1;
     grid-row: 1 / 2;
     margin: 5px;
     padding: 5px;
+    position: sticky;
+    text-align: right;
+    top: 0;
+    z-index: 10;
   }
 
   header blockquote {
