--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,8 @@
     <div class="grid-container">
         <header>
             <div class="grid-item">
+                <a id="Top" href="https://kushalsamant.github.io">KVSHVL SVMVNT</a>
+                [About](#About) || [People](#People) || [Projects](#Projects) || [Back to Top](#Top)
 <!--
                 <h1><a href="https://kushalsamant.github.io">KVSHVL</a></h1>
                 <p>
