--- a/_sass/jekyll-theme-minimal-red-borders.scss
+++ b/_sass/jekyll-theme-minimal-red-borders.scss
@@ -112,7 +112,7 @@
     position: sticky;
     text-align: right;
     top: 0;
-    z-index: 10;
+    z-index: 1000;
   }
 
   header blockquote {
@@ -303,7 +303,7 @@
   }
 
   header.grid-item {
-    background-color: #11111177;
+    background-color: #DDDDDD;
     border-style: none;
     font-size: 15px;
     grid-column: 1 / -1;
@@ -313,7 +313,7 @@
     position: sticky;
     text-align: right;
     top: 0;
-    z-index: 10;
+    z-index: 1000;
   }
 
   header blockquote {
