--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
     <div class="grid-container">
         <header>
             <div class="grid-item">
-                <h1><a href="https://kushalsamant.github.io">KVSHVL</a></h1>
+                <h1><a href="https://kushalsamant.github.io">KVSHVL SVMVNT</a></h1>
                 <p>
                     <a href="https://kushalsamant.github.io/about.html">About</a><br>
                     <a href="https://kushalsamant.github.io/people.html">People</a><br>
