--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,16 +43,10 @@
         <header>
             <div class="grid-item">
                 <h1><a href="https://kushalsamant.github.io">KVSHVL SVMVNT</a></h1>
-                <p>
-                    <a href="https://kushalsamant.github.io/about.html">About</a><br>
-                    <a href="https://kushalsamant.github.io/people.html">People</a><br>
-                    <a href="https://kushalsamant.github.io/projects.html">Projects</a><br>
-                    <div class="roadmap-spacer-1"></div>
-                        <p>
-                            <a class="btn" href="https://kushalsamant.github.io/getintouch.html">Get&nbsp;In&nbsp;Touch</a><br>
-                        </p>
-                    <div class="roadmap-spacer-2"></div>
-                </p>
+                || <a href="https://kushalsamant.github.io/about.html">About</a>
+                || <a href="https://kushalsamant.github.io/people.html">People</a>
+                || <a href="https://kushalsamant.github.io/projects.html">Projects</a>
+                || <a class="btn" href="https://kushalsamant.github.io/getintouch.html">Get&nbsp;In&nbsp;Touch</a>
             </div>
         </header>
         <section>
@@ -84,6 +78,11 @@
 
                 <!--
                 <a href="https://kushalsamant.github.io/anthology.html"><img src="/assets/img/logokvshvl.png" alt="Anthology" width="30"></a>
+                <div class="roadmap-spacer-1"></div>
+                    <p>
+                        <a class="btn" href="https://kushalsamant.github.io/getintouch.html">Get&nbsp;In&nbsp;Touch</a><br>
+                    </p>
+                <div class="roadmap-spacer-2"></div>
                 -->
 
                 <!--
