--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,11 +42,11 @@
     <div class="grid-container">
         <header>
             <div class="grid-item">
-                <h1><a href="https://kushalsamant.github.io">KVSHVL SVMVNT</a></h1>
-                || <a href="https://kushalsamant.github.io/about.html">About</a>
-                || <a href="https://kushalsamant.github.io/people.html">People</a>
-                || <a href="https://kushalsamant.github.io/projects.html">Projects</a>
-                || <a class="btn" href="https://kushalsamant.github.io/getintouch.html">Get&nbsp;In&nbsp;Touch</a>
+                <h1><a href="https://kushalsamant.github.io">KVSHVL</a></h1>
+                    <a href="https://kushalsamant.github.io/about.html">About</a>
+                    <a href="https://kushalsamant.github.io/people.html">People</a>
+                    <a href="https://kushalsamant.github.io/projects.html">Projects</a>
+                    <a href="https://kushalsamant.github.io/getintouch.html">Get&nbsp;In&nbsp;Touch</a>
             </div>
         </header>
         <section>
