--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -18,6 +18,7 @@
 
   html {
     scroll-behavior: smooth;
+    scroll-padding-top: 60px;
   }
 
   h1 {
@@ -50,8 +51,8 @@
     color: #FFFFFF;
     font: 15px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 400;
-    margin: 15px;
-    padding: 150px;
+    margin: 0px;
+    padding: 0px;
     word-wrap: break-word;
     width: auto;
   }
@@ -107,8 +108,8 @@
     font-size: 15px;
     grid-column: 1 / -1;
     grid-row: 1 / 2;
-    margin: 15px;
-    padding: 150px;
+    margin: 0px;
+    padding: 15px;
     position: sticky;
     text-align: right;
     top: 0;
@@ -219,6 +220,7 @@
 
   html {
     scroll-behavior: smooth;
+    scroll-padding-top: 20px;
   }
 
   h1 {
@@ -303,7 +305,7 @@
   }
 
   header.grid-item {
-    background-color: #11111177;
+    background-color: #DDDDDD;
     border-style: none;
     font-size: 15px;
     grid-column: 1 / -1;
