--- a/_sass/jekyll-theme-minimal-red-borders-sticky.scss
+++ b/_sass/jekyll-theme-minimal-red-borders-sticky.scss
@@ -18,7 +18,7 @@
 
   html {
     scroll-behavior: smooth;
-    scroll-padding-top: 60px;
+    scroll-padding-top: 75px;
   }
 
   h1 {
@@ -30,7 +30,7 @@
   }
 
   .grid-container {
-    background-color: #11111177;
+    background-color: #111111;
     border-style: none;
     column-gap: 15px;
     display: grid;
@@ -43,7 +43,7 @@
 
   body {
     background-attachment: fixed;
-    background-color: #11111177;
+    background-color: #111111;
     background-image: url('/assets/img/wallpaper.png');
     background-position: center;
     background-repeat: no-repeat;
@@ -90,7 +90,7 @@
     line-height: 1.5;
     margin: 15px;
     padding: 15px;
-    text-align: right;
+    text-align: left;
   }
 
   header h1 {
@@ -99,19 +99,19 @@
     line-height: 1.5;
     margin: 15px;
     padding: 15px;
-    text-align: right;
+    text-align: left;
   }
 
   header.grid-item {
-    background-color: #11111177;
+    background-color: #111111;
     border-style: none;
     font-size: 15px;
     grid-column: 1 / -1;
-    grid-row: 1 / 2;
+    grid-row: auto;
     margin: 0px;
     padding: 15px;
     position: sticky;
-    text-align: right;
+    text-align: left;
     top: 0;
     z-index: 1000;
   }
@@ -137,13 +137,13 @@
   }
 
   section.grid-item {
-    background-color: #11111177;
+    background-color: #111111;
     border-style: none;
     font-size: 15px;
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+    grid-row: auto;
     margin: 15px;
-    padding: 150px;
+    padding: 30px;
     text-align: left;
   }
 
@@ -158,7 +158,7 @@
   }
 
   .btn:hover {
-    background-color: #11111177;
+    background-color: #111111;
     border: 1px solid #F11111;
     border-radius: 45px;
     margin: 15px;
@@ -188,17 +188,17 @@
     line-height: 1.5;
     margin: 15px;
     padding: 15px;
-    text-align: right;
+    text-align: left;
   }
 
   footer.grid-item {
-    background-color: #11111177;
+    background-color: #111111;
     border-style: none;
     font-size: 15px;
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
+    grid-column: 1 / -1;
+    grid-row: auto;
     margin: 15px;
-    padding: 150px;
+    padding: 15px;
   }
 
 }
@@ -220,7 +220,7 @@
 
   html {
     scroll-behavior: smooth;
-    scroll-padding-top: 20px;
+    scroll-padding-top: 75px;
   }
 
   h1 {
@@ -232,7 +232,7 @@
   }
 
   .grid-container {
-    background-color: #11111177;
+    background-color: #111111;
     border-style: none;
     column-gap: 5px;
     display: grid;
@@ -245,7 +245,7 @@
 
   body {
     background-attachment: fixed;
-    background-color: #11111177;
+    background-color: #111111;
     background-image: url('/assets/img/wallpaper.png');
     background-position: center;
     background-repeat: no-repeat;
@@ -253,8 +253,8 @@
     color: #FFFFFF;
     font: 15px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 400;
-    margin: 5px;
-    padding: 5px;
+    margin: 0px;
+    padding: 0px;
     word-wrap: break-word;
     width: auto;
   }
@@ -305,15 +305,15 @@
   }
 
   header.grid-item {
-    background-color: #DDDDDD;
+    background-color: #111111;
     border-style: none;
     font-size: 15px;
     grid-column: 1 / -1;
-    grid-row: 1 / 2;
+    grid-row: auto;
     margin: 5px;
     padding: 5px;
     position: sticky;
-    text-align: right;
+    text-align: left;
     top: 0;
     z-index: 1000;
   }
@@ -339,10 +339,10 @@
   }
 
   section.grid-item {
-    background-color: #11111177;
+    background-color: #111111;
     border-style: none;
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
+    grid-column: 1 / -1;
+    grid-row: auto;
     margin: 5px;
     padding: 5px;
     font-size: 15px;
@@ -370,7 +370,7 @@
   }
 
   .btn:hover {
-    background-color: #11111177;
+    background-color: #111111;
     border: 1px solid #F11111;
     border-radius: 45px;
     margin: 15px;
@@ -393,11 +393,11 @@
   }
 
   footer.grid-item {
-    background-color: #11111177;
+    background-color: #111111;
     border-style: none;
     font-size: 15px;
-    grid-column: 1 / 2;
-    grid-row: 3 / 4;
+    grid-column: 1 / -1;
+    grid-row: auto;
     margin: 5px;
     padding: 5px;
   }
@@ -415,6 +415,7 @@
     word-wrap: break-word;
   }
 
+}
+
 /* end of css
 -----------------------------------------------------------------------------*/
-}
