--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -30,7 +30,7 @@
   }
 
   .grid-container {
-    background-color: #111111;
+    background-color: #11111177;
     border-style: none;
     column-gap: 15px;
     display: grid;
@@ -43,7 +43,7 @@
 
   body {
     background-attachment: fixed;
-    background-color: #111111;
+    background-color: #11111177;
     background-image: url('/assets/img/wallpaper.png');
     background-position: center;
     background-repeat: no-repeat;
@@ -103,7 +103,7 @@
   }
 
   header.grid-item {
-    background-color: #111111;
+    background-color: #11111177;
     border-style: none;
     font-size: 15px;
     grid-column: 1 / -1;
@@ -137,7 +137,7 @@
   }
 
   section.grid-item {
-    background-color: #111111;
+    background-color: #11111177;
     border-style: none;
     font-size: 15px;
     grid-column: 1 / -1;
@@ -158,7 +158,7 @@
   }
 
   .btn:hover {
-    background-color: #111111;
+    background-color: #11111177;
     border: 1px solid #F11111;
     border-radius: 45px;
     margin: 15px;
@@ -192,7 +192,7 @@
   }
 
   footer.grid-item {
-    background-color: #111111;
+    background-color: #11111177;
     border-style: none;
     font-size: 15px;
     grid-column: 1 / -1;
@@ -232,7 +232,7 @@
   }
 
   .grid-container {
-    background-color: #111111;
+    background-color: #11111177;
     border-style: none;
     column-gap: 5px;
     display: grid;
@@ -245,7 +245,7 @@
 
   body {
     background-attachment: fixed;
-    background-color: #111111;
+    background-color: #11111177;
     background-image: url('/assets/img/wallpaper.png');
     background-position: center;
     background-repeat: no-repeat;
@@ -305,7 +305,7 @@
   }
 
   header.grid-item {
-    background-color: #111111;
+    background-color: #11111177;
     border-style: none;
     font-size: 15px;
     grid-column: 1 / -1;
@@ -339,7 +339,7 @@
   }
 
   section.grid-item {
-    background-color: #111111;
+    background-color: #11111177;
     border-style: none;
     grid-column: 1 / -1;
     grid-row: auto;
@@ -370,7 +370,7 @@
   }
 
   .btn:hover {
-    background-color: #111111;
+    background-color: #11111177;
     border: 1px solid #F11111;
     border-radius: 45px;
     margin: 15px;
@@ -393,7 +393,7 @@
   }
 
   footer.grid-item {
-    background-color: #111111;
+    background-color: #11111177;
     border-style: none;
     font-size: 15px;
     grid-column: 1 / -1;
@@ -409,6 +409,7 @@
 
 @media print {
   body {
+    background: none;
     color: #FFFFFF;
     font-size: 15px;
     padding: 1.0in;
