--- a/_sass/jekyll-theme-minimal-red-borders.scss
+++ b/_sass/jekyll-theme-minimal-red-borders.scss
@@ -18,6 +18,7 @@
 
   html {
     scroll-behavior: smooth;
+    scroll-padding-top: 75px;
   }
 
   h1 {
@@ -50,8 +51,8 @@
     color: #FFFFFF;
     font: 15px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 400;
-    margin: 15px;
-    padding: 150px;
+    margin: 0px;
+    padding: 0px;
     word-wrap: break-word;
     width: auto;
   }
@@ -89,7 +90,7 @@
     line-height: 1.5;
     margin: 15px;
     padding: 15px;
-    text-align: right;
+    text-align: left;
   }
 
   header h1 {
@@ -98,7 +99,7 @@
     line-height: 1.5;
     margin: 15px;
     padding: 15px;
-    text-align: right;
+    text-align: left;
   }
 
   header.grid-item {
@@ -106,11 +107,11 @@
     border-style: none;
     font-size: 15px;
     grid-column: 1 / -1;
-    grid-row: 1 / 2;
-    margin: 15px;
-    padding: 150px;
+    grid-row: auto;
+    margin: 0px;
+    padding: 15px;
     position: sticky;
-    text-align: right;
+    text-align: left;
     top: 0;
     z-index: 1000;
   }
@@ -139,10 +140,10 @@
     background-color: #11111177;
     border-style: none;
     font-size: 15px;
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+    grid-row: auto;
     margin: 15px;
-    padding: 150px;
+    padding: 30px;
     text-align: left;
   }
 
@@ -187,17 +188,17 @@
     line-height: 1.5;
     margin: 15px;
     padding: 15px;
-    text-align: right;
+    text-align: left;
   }
 
   footer.grid-item {
     background-color: #11111177;
     border-style: none;
     font-size: 15px;
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
+    grid-column: 1 / -1;
+    grid-row: auto;
     margin: 15px;
-    padding: 150px;
+    padding: 15px;
   }
 
 }
@@ -219,6 +220,7 @@
 
   html {
     scroll-behavior: smooth;
+    scroll-padding-top: 75px;
   }
 
   h1 {
@@ -251,8 +253,8 @@
     color: #FFFFFF;
     font: 15px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 400;
-    margin: 5px;
-    padding: 5px;
+    margin: 0px;
+    padding: 0px;
     word-wrap: break-word;
     width: auto;
   }
@@ -303,15 +305,15 @@
   }
 
   header.grid-item {
-    background-color: #DDDDDD;
+    background-color: #11111177;
     border-style: none;
     font-size: 15px;
     grid-column: 1 / -1;
-    grid-row: 1 / 2;
+    grid-row: auto;
     margin: 5px;
     padding: 5px;
     position: sticky;
-    text-align: right;
+    text-align: left;
     top: 0;
     z-index: 1000;
   }
@@ -339,8 +341,8 @@
   section.grid-item {
     background-color: #11111177;
     border-style: none;
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
+    grid-column: 1 / -1;
+    grid-row: auto;
     margin: 5px;
     padding: 5px;
     font-size: 15px;
@@ -394,8 +396,8 @@
     background-color: #11111177;
     border-style: none;
     font-size: 15px;
-    grid-column: 1 / 2;
-    grid-row: 3 / 4;
+    grid-column: 1 / -1;
+    grid-row: auto;
     margin: 5px;
     padding: 5px;
   }
@@ -407,12 +409,14 @@
 
 @media print {
   body {
+    background: none;
     color: #FFFFFF;
     font-size: 15px;
     padding: 1.0in;
     word-wrap: break-word;
   }
 
+}
+
 /* end of css
 -----------------------------------------------------------------------------*/
-}
