--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -404,6 +404,14 @@
 
 }
 
+/* universal sticky header
+-----------------------------------------------------------------------------*/
+header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
 /* print styles
 -----------------------------------------------------------------------------*/
 
