--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,16 +43,15 @@
         <header>
             <div class="grid-item">
                 <h1><a href="https://kushalsamant.github.io">KVSHVL SVMVNT</a></h1>
-<!--
-                    <a href="https://kushalsamant.github.io/about.html">About</a>
-                    <a href="https://kushalsamant.github.io/people.html">People</a>
-                    <a href="https://kushalsamant.github.io/projects.html">Projects</a>
-                    <a href="https://kushalsamant.github.io/getintouch.html">Get&nbsp;In&nbsp;Touch</a>
--->
+                <p><a href="#About">About</a> || <a href="#People">People</a> || <a href="#Projects">Projects</a> || <a href="#GetinTouch">Get in Touch</a></p>
             </div>
         </header>
         <section>
             <div class="grid-item">
+                <div id="About"></div>
+                <div id="People"></div>
+                <div id="Projects"></div>
+                <div id="GetinTouch"></div>
                 {{ content }}
             </div>
         </section>
