--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
         <header>
             <div class="grid-item">
                 <h1><a href="https://kushalsamant.github.io">KVSHVL SVMVNT</a></h1>
-                <p><a href="#About">About</a> || <a href="#People">People</a> || <a href="#Projects">Projects</a> || <a href="#GetinTouch">Get in Touch</a></p>
+                <p><a href="#About">About</a> <a href="#People">People</a> <a href="#Projects">Projects</a> <a href="#GetinTouch">Get in Touch</a></p>
             </div>
         </header>
         <section>
