--- a/_sass/jekyll-theme-minimal-red-borders.scss
+++ b/_sass/jekyll-theme-minimal-red-borders.scss
@@ -18,7 +18,7 @@
 
   html {
     scroll-behavior: smooth;
-    scroll-padding-top: 90px;
+    scroll-padding-top: 70px;
   }
 
   h1 {
@@ -87,18 +87,18 @@
   header p {
     color: #FFFFFF;
     font-size: 15px;
-    line-height: 1.5;
-    margin: 15px;
-    padding: 15px;
+    line-height: 1.3;
+    margin: 5px 15px;
+    padding: 0px;
     text-align: left;
   }
 
   header h1 {
     color: #FFFFFF;
     font-size: 15px;
-    line-height: 1.5;
-    margin: 15px;
-    padding: 15px;
+    line-height: 1.3;
+    margin: 5px 15px;
+    padding: 0px;
     text-align: left;
   }
 
@@ -109,7 +109,7 @@
     grid-column: 1 / -1;
     grid-row: auto;
     margin: 0px;
-    padding: 15px;
+    padding: 8px 15px;
     text-align: left;
   }
 
@@ -217,7 +217,7 @@
 
   html {
     scroll-behavior: smooth;
-    scroll-padding-top: 60px;
+    scroll-padding-top: 45px;
   }
 
   h1 {
@@ -286,18 +286,18 @@
   header p {
     color: #FFFFFF;
     font-size: 15px;
-    line-height: 1.5;
-    margin: 5px;
-    padding: 5px;
+    line-height: 1.3;
+    margin: 3px 5px;
+    padding: 0px;
     text-align: left;
   }
 
   header h1 {
     color: #FFFFFF;
     font-size: 15px;
-    line-height: 1.5;
-    margin: 5px;
-    padding: 5px;
+    line-height: 1.3;
+    margin: 3px 5px;
+    padding: 0px;
     text-align: left;
   }
 
@@ -308,7 +308,7 @@
     grid-column: 1 / -1;
     grid-row: auto;
     margin: 5px;
-    padding: 5px;
+    padding: 5px 10px;
     text-align: left;
   }
 
