--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,10 @@
         </header>
         <section>
             <div class="grid-item">
+                <div id="About"></div>
+                <div id="People"></div>
+                <div id="Projects"></div>
+                <div id="GetinTouch"></div>
                 {{ content }}
             </div>
         </section>
