--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,19 +44,20 @@
             <div class="grid-item">
                 <h1><a href="https://kushalsamant.github.io">KVSHVL SVMVNT</a></h1>
                 <p>
-                    <a href="#About">About</a>
-                    <a href="#People">People</a>
-                    <a href="#Projects">Projects</a>
-                    <a href="#GetinTouch">Get in Touch</a>
+                    <a href="https://kushalsamant.github.io/about.html">About</a>
+                    <a href="https://kushalsamant.github.io/people.html">People</a>
+                    <a href="https://kushalsamant.github.io/projects.html">Projects</a>
+                    <a href="https://kushalsamant.github.io/getintouch.html">Get in Touch</a>
                 </p>
+                <div class="roadmap-spacer-1"></div>
+                    <p>
+                        <a class="btn" href="https://kvshvl.setmore.com" rel="noopener noreferrer" target="_blank">Book&nbsp;a&nbsp;1:1&nbsp;Consultation</a><br>
+                    </p>
+                <div class="roadmap-spacer-2"></div>
             </div>
         </header>
         <section>
             <div class="grid-item">
-                <div id="About"></div>
-                <div id="People"></div>
-                <div id="Projects"></div>
-                <div id="GetinTouch"></div>
                 {{ content }}
             </div>
         </section>
@@ -84,11 +85,6 @@
 
                 <!--
                 <a href="https://kushalsamant.github.io/anthology.html"><img src="/assets/img/logokvshvl.png" alt="Anthology" width="30"></a>
-                <div class="roadmap-spacer-1"></div>
-                    <p>
-                        <a class="btn" href="https://kushalsamant.github.io/getintouch.html">Get&nbsp;In&nbsp;Touch</a><br>
-                    </p>
-                <div class="roadmap-spacer-2"></div>
                 -->
 
                 <!--
