--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,7 @@
 ---
 
 // Modern Architecture Portfolio Theme
-// Designed for Architect Kushal Samant's Portfolio
+// Designed for Architect Kushal Samant's Website
 
 // Import the modern architecture theme
 @import "jekyll-theme-minimal-modern-architecture";
