--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,10 +72,12 @@
                 <a href="http://www.fiverr.com/s/2Kqy7Ve" rel="noopener noreferrer" target="_blank">Fiverr</a> |
                 <a href="https://github.com/kushalsamant" rel="noopener noreferrer" target="_blank">Github</a> |
                 <a href="https://kvshvl.gumroad.com" rel="noopener noreferrer" target="_blank">Gumroad</a> |
-                <a href="https://news.ycombinator.com/user?id=kvshvl" rel="noopener noreferrer" target="_blank">Hacker News</a> |
+                <a href="https://news.ycombinator.com/user?id=kvshvl" rel="noopener noreferrer" target="_blank">Hacker News</a> |                
+                <a href="https://www.instagram.com/kvshvl" rel="noopener noreferrer" target="_blank">Instagram</a> |
                 <a href="https://www.linkedin.com/in/kvshvl" rel="noopener noreferrer" target="_blank">LinkedIn</a> |
                 <a href="https://kvshvl.medium.com" rel="noopener noreferrer" target="_blank">Medium</a> |
                 <a href="https://patreon.com/c/kvshvl" rel="noopener noreferrer" target="_blank">Patreon</a> |
+                <a href="https://in.pinterest.com/kvshvl" rel="noopener noreferrer" target="_blank">Pinterest</a> |
                 <a href="https://kvshvl.setmore.com" rel="noopener noreferrer" target="_blank">Setmore</a> |
                 <a href="https://sketchfab.com/3d-models/shelving-complete-cutting-files-guide-135b548e7c5e4b28a0aae1777c99840e" rel="noopener noreferrer" target="_blank">Sketchfab</a> |
                 <a href="https://311290.myshopify.com" rel="noopener noreferrer" target="_blank">Shopify</a> |
@@ -86,6 +88,7 @@
                 <a href="https://kvshvl.threadless.com" rel="noopener noreferrer" target="_blank">Threadless</a> |
                 <a href="https://twitch.tv/kvshvl" rel="noopener noreferrer" target="_blank">Twitch</a> |
                 <a href="https://twitter.com/kvshvl_" rel="noopener noreferrer" target="_blank">Twitter</a>
+                <a href="https://www.youtube.com/@kvshvl/videos" rel="noopener noreferrer" target="_blank">YouTube</a>
 
                 <!--
                 <a href="https://kushalsamant.github.io/anthology.html"><img src="/assets/img/logokvshvl.png" alt="Anthology" width="30"></a>
