--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,6 +90,8 @@
                 <a href="https://twitter.com/kvshvl_" rel="noopener noreferrer" target="_blank">Twitter</a>
                 <a href="https://www.youtube.com/@kvshvl/videos" rel="noopener noreferrer" target="_blank">YouTube</a>
 
+                <a href="https://www.kvshvl.in/termsofuse.html" rel="noopener noreferrer" target="_blank">Terms of Use</a>
+
                 <!--
                 <a href="https://kushalsamant.github.io/anthology.html"><img src="/assets/img/logokvshvl.png" alt="Anthology" width="30"></a>
                 -->
