--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,8 +87,8 @@
                 <a href="https://my-store-3157273.creator-spring.com" rel="noopener noreferrer" target="_blank">Teespring</a> |
                 <a href="https://kvshvl.threadless.com" rel="noopener noreferrer" target="_blank">Threadless</a> |
                 <a href="https://twitch.tv/kvshvl" rel="noopener noreferrer" target="_blank">Twitch</a> |
-                <a href="https://twitter.com/kvshvl_" rel="noopener noreferrer" target="_blank">Twitter</a>
-                <a href="https://www.youtube.com/@kvshvl/videos" rel="noopener noreferrer" target="_blank">YouTube</a>
+                <a href="https://twitter.com/kvshvl_" rel="noopener noreferrer" target="_blank">Twitter</a> |
+                <a href="https://www.youtube.com/@kvshvl/videos" rel="noopener noreferrer" target="_blank">YouTube</a> |
 
                 <a href="https://www.kvshvl.in/termsofuse.html" rel="noopener noreferrer" target="_blank">Terms of Use</a>
 
