Add GitHub Sponsors link to default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,6 +71,7 @@
                 <a href="https://contrado.com/stores/kvshvl" rel="noopener noreferrer" target="_blank">Contrado</a> |
                 <a href="http://www.fiverr.com/s/2Kqy7Ve" rel="noopener noreferrer" target="_blank">Fiverr</a> |
                 <a href="https://github.com/kushalsamant" rel="noopener noreferrer" target="_blank">Github</a> |
+                <a href="https://github.com/sponsors/kushalsamant" rel="noopener noreferrer" target="_blank">GitHub Sponsors</a> |
                 <a href="https://kvshvl.gumroad.com" rel="noopener noreferrer" target="_blank">Gumroad</a> |
                 <a href="https://news.ycombinator.com/user?id=kvshvl" rel="noopener noreferrer" target="_blank">Hacker News</a> |                
                 <a href="https://www.instagram.com/kvshvl" rel="noopener noreferrer" target="_blank">Instagram</a> |
